[project]
name = "knowledge-qa-agent"
version = "0.1.0"
description = "企业知识库问答智能体平台"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your@email.com" }
]
keywords = ["rag", "agent", "knowledge-base", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# 核心依赖
dependencies = [
    # Web框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # 数据库
    "sqlalchemy>=2.0.25",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    
    # LLM & Embedding
    "openai>=1.12.0",
    "httpx>=0.26.0",
    
    # 向量数据库
    "qdrant-client>=1.7.0",
    
    # 文档处理
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
    "python-pptx>=0.6.23",
    "playwright>=1.41.0",
    "html2text>=2020.1.16",
    "pandas>=2.1.0",
    
    # Embedding
    "sentence-transformers>=2.3.0",
    
    # RAG 框架
    "langchain>=0.3.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    
    # SSE 支持
    "sse-starlette>=1.8.0",
    
    # 配置管理
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # 工具库
    "tenacity>=8.2.0",
    "tiktoken>=0.5.0",
]

# 开发依赖
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
    "ipython>=8.20.0",
]

# RAG 可选依赖 (使用本地模型)
local-embedding = [
    "sentence-transformers>=2.3.0",
    " InstructorEmbedding>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "config.py", "core", "db", "document", "main.py", "rag", "schemas", "services", "utils"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
